# rtsp-mpp-crop

./: CMakeLists.txt  main.cpp  run.sh  toolchain-aarch64.cmake
crop/: Im2dCrop.cpp  Im2dCrop.h  RgaCrop.cpp  RgaCrop.h
decoder/: MppDecoder.cpp  MppDecoder.h
encoder/: MppEncoder.cpp  MppEncoder.h
rtsp_client/: CallbackFramedSource.h  LiveRtspInput.cpp  LiveRtspInput.h
rtsp_server/: LiveRtspOutput.cpp  LiveRtspOutput.h
